syntax = "proto2";

package clockwork;

enum RequestType {
  REQ_UPLOAD_MODEL = 1;
  REQ_INFERENCE = 2;
  REQ_LOAD_REMOTE_MODEL = 3;
  REQ_EVICT = 4;

  RSP_UPLOAD_MODEL = 101;
  RSP_INFERENCE = 102;
  RSP_LOAD_REMOTE_MODEL = 103;
  RSP_EVICT = 104;
}

message RequestHeaderProto {
  optional int32 user_id = 1;
  optional int32 user_request_id = 2;
}

message ResponseHeaderProto {
  optional int32 user_request_id = 1;
  optional int32 status = 2;
  optional string message = 3;
}

message ModelUploadReqProto {
  required RequestHeaderProto header = 1;
  required uint32 batchsize = 3;
  required uint64 so_len = 4;
  required uint64 clockwork_len = 5;
  required uint64 params_len = 6;
}

message ModelUploadRspProto {
  required ResponseHeaderProto header = 1;
  required uint32 model_id = 2;
  required uint64 input_size = 3;
  required uint64 output_size = 4;
}


message ModelInferenceReqProto {
  required RequestHeaderProto header = 1;
  required uint32 model_id = 2;
  required uint32 batch_size = 3;
}

message ModelInferenceRspProto {
  required ResponseHeaderProto header = 1;
  required uint32 model_id = 2;
  required uint32 batch_size = 3;
}

message EvictReqProto {
  required RequestHeaderProto header = 1;
  required uint32 model_id = 2;
}

message EvictRspProto {
  required ResponseHeaderProto header = 1;
}

message LoadModelFromDiskReqProto {
  required RequestHeaderProto header = 1;
  required string remote_path = 2;
}

message LoadModelFromDiskRspProto {
  required ResponseHeaderProto header = 1;
  required uint32 model_id = 2;
  required uint64 input_size = 3;
  required uint64 output_size = 4;
}

enum ActionType {
  ACT_LOAD_MODEL_FROM_DISK = 1;
  ACT_LOAD_WEIGHTS = 2;
  ACT_INFER = 3;
  ACT_EVICT_WEIGHTS = 4;

  RES_LOAD_MODEL_FROM_DISK = 101;
  RES_LOAD_WEIGHTS = 102;
  RES_INFER = 103;
  RES_EVICT_WEIGHTS = 104;
}
